<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
	
    <!-- BAQR Strings for Application -->
    <string name="app_name">BAQR</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Main</string>
    <string name="title_section2">Survey</string>
    <string name="title_section3">Notes</string>
    <string name="title_send">Send</string>
    <string name="title_receive">Receive</string>
    <string name="mypanic">Panic Numbers</string>
    <string name="mytags">My Tags</string>
    <string name="copticPage0">Chat</string>
    <string name="copticPage1">Map</string>
    
    <!-- BAQRcam Strings for Remote Viewing -->
    <string name="options">Options</string>
    <string name="quit">Quit</string>
    <string name="description">Capture live video and audio streaming from your smartphone with BAQRcam</string>
    <string name="line1">In chrome or firefox type</string>
    <string name="line2">In VLC open</string>
    <string name="options_activity_title">Settings</string>
    <string name="warning">Turn on wifi or tethering !</string>
    <string name="streaming">Streaming !</string>
    <string name="bitrate">0 kbps</string>
    <string name="notification_title">BAQRcam</string>
    <string name="notification_content">Beware ! BAQRcam is running ;)</string>
    <string name="preview">Start a stream to enable the preview !</string>
    <string name="settings0">The current resolution is</string>
    <string name="settings1">The current framerate is</string>
    <string name="settings2">The current bitrate is</string>
    <string name="settings3">Sound streaming</string>
    <string name="settings4">Enable/Disable audio streaming</string>
    <string name="settings5">Audio encoder</string>
    <string name="settings6">AAC requires at least ICS</string>
    <string name="settings7">Video streaming</string>
    <string name="settings8">Enable/Disable video streaming</string>
    <string name="settings9">Video encoder</string>
    <string name="settings10">Two video compression algorithms are available: H.263 and H.264</string>
    <string name="settings11">Resolution</string>
    <string name="settings12">Framerate</string>
    <string name="settings13">Bitrate</string>
    <string name="settings14">More options</string>
    <string name="settings15">Notification</string>
    <string name="settings16">Enable/Disable the notification</string>
    <string name="settings19">HTTP server</string>
    <string name="settings20">HTTP server port</string>
    <string name="settings21">Port used by the HTTP server</string>
    <string name="settings22">Enabled</string>
    <string name="settings23">Enable/Disable the HTTP server. Leave it on if you don\'t know what you are doing !</string>
    <string name="settings24">Use HTTPS</string>
    <string name="settings25">NOT STABLE YET !</string>
    <string name="settings26">HTTPS server port</string>
    <string name="settings27">Port used by the HTTPS server</string>
    <string name="settings28">RTSP server</string>
    <string name="settings29">Enabled</string>
    <string name="settings30">Useful to use BAQRcam directly with VLC</string>    
    <string name="settings31">RTSP server port</string>
    <string name="settings32">Port used by the RTSP server</string>    
    <string name="bind_failed">You need to choose another port for the %s server !</string>
    <string name="port_used">Port already in use !</string>    
    <string name="page0">Main</string>
    <string name="page1">Preview</string>
    <string name="page2">About</string>
    
    <!-- Bluetooth Activity Settings -->
    <string name="search">Search for devices</string>
    <string name="searching">Searching&#8230;</string>
    <string name="wheelSpeeds">Wheel speeds</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="commandHint">Enter a command</string>
    <string name="send">Send</string>
    <string name="threshold">Threshold</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="circle">Circle</string>
    <string name="pairedDevices">Paired devices</string>
    <string name="availableDevices">Available devices</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="kp">Kp</string>
    <string name="ki">Ki</string>
    <string name="kd">Kd</string>
    <string name="maxSpeed">Maximum speed</string>
    <string name="leftStop">L: 0</string>
    <string name="rightStop">R: 0</string>
    <string name="touchPosition">Touch position</string>
    <string name="speak">Speak</string>
    <string name="data">Data</string>
    <string name="clients">Clients</string>
    <string name="ip">IP:</string>
    <string name="serverStart">Start server</string>
    <string name="serverStop">Stop server</string>

    <style name="listItem">
        <item name="android:paddingTop">5dp</item>
        <item name="android:paddingBottom">5dp</item>
        <item name="android:paddingLeft">8dp</item>
        <item name="android:paddingRight">8dp</item>
    </style>

    <style name="title">
        <item name="android:textSize">18sp</item>
        <item name="android:textColor">#ffffff</item>
    </style>

    <style name="subtitle">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#ffffff</item>
    </style>

    <style name="settingsRow">
        <item name="android:paddingTop">8dp</item>
        <item name="android:paddingBottom">8dp</item>
        <item name="android:paddingLeft">8dp</item>
        <item name="android:paddingRight">8dp</item>
    </style>
    <!-- End Bluetooth -->
    
    <!-- Maps With Me API -->
    <string  name="mwm_should_be_installed">Offline maps are required to proceed. We have partnered with MapsWithMe to provide you with offline maps of the entire world.\nTo continue please download the app:</string>
    <string  name="down_lite">Download MapsWithMe Lite (free)</string>
    <string  name="down_pro">Download MapsWithMe Pro</string>

    <string  name="url_pro">http://mapswith.me/get</string>
    <string  name="url_lite">http://mapswith.me/app</string>
    <!-- End Maps With Me API -->

</resources>
